# wespeaker

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  CPPLINT.cfg  README.html  README.md  ROADMAP.md  contribute.html  genindex.html  index.html  objects.inv  paper.html  papers_using_wespeaker.html  pretrained.html  py-modindex.html  pyproject.toml  python_package.html  reference.html  requirements.html  requirements.txt  resnet34.yaml  runtime.html  search.html  searchindex.js  setup.cfg  setup.py  speaker_recognition_papers.html  speaker_recognition_papers.md  train.html  train.py  vox.html  vox_ssl.html  voxconverse_diar.html
.github/workflows/: doc.yml  lint.yml  runtime.yml
_modules/: index.html
_sources/: README.md.txt  index.rst.txt  paper.md.txt  papers_using_wespeaker.md.txt  pretrained.md.txt  python_package.md.txt  runtime.md.txt  speaker_recognition_papers.md.txt  vox_ssl.md.txt  voxconverse_diar.md.txt
_sources/python_api/: modules.rst.txt  wespeaker.cli.hub.rst.txt  wespeaker.cli.rst.txt  wespeaker.cli.speaker.rst.txt  wespeaker.cli.utils.rst.txt  wespeaker.diar.extract_emb.rst.txt  wespeaker.diar.make_fbank.rst.txt  wespeaker.diar.make_oracle_sad.rst.txt  wespeaker.diar.make_rttm.rst.txt  wespeaker.diar.make_system_sad.rst.txt  wespeaker.diar.rst.txt  wespeaker.diar.spectral_clusterer.rst.txt  wespeaker.diar.umap_clusterer.rst.txt  wespeaker.frontend.rst.txt  wespeaker.frontend.s3prl.rst.txt  wespeaker.frontend.tfmel.rst.txt  wespeaker.frontend.w2vbert.rst.txt  wespeaker.frontend.whisper_encoder.rst.txt  wespeaker.models.campplus.rst.txt  wespeaker.models.convert_repvgg.rst.txt  wespeaker.models.ecapa_tdnn.rst.txt  wespeaker.models.eres2net.rst.txt  wespeaker.models.gemini_dfresnet.rst.txt  wespeaker.models.pooling_layers.rst.txt  wespeaker.models.projections.rst.txt  wespeaker.models.redimnet.rst.txt  wespeaker.models.redimnet2.rst.txt  wespeaker.models.repvgg.rst.txt  wespeaker.models.res2net.rst.txt  wespeaker.models.resnet.rst.txt  wespeaker.models.rst.txt  wespeaker.models.samresnet.rst.txt  wespeaker.models.speaker_model.rst.txt  wespeaker.models.tdnn.rst.txt  wespeaker.models.w2vbert_adapter_mfa.rst.txt  wespeaker.models.whisper_PMFA.rst.txt  wespeaker.models.xi_vector.rst.txt  wespeaker.rst.txt  wespeaker.utils.checkpoint.rst.txt  wespeaker.utils.dataset_utils_deprecated.rst.txt  (+8 more)
conda_envs/: py_torch24_cpu.yml
docs/: Makefile  README.md  conf.py  contribute.md  index.rst  paper.md  papers_using_wespeaker.md  pretrained.md  python_package.md  reference.rst  runtime.md  speaker_recognition_papers.md  train.rst  vox.md  vox_ssl.md
examples/voxceleb/: README.md
examples/voxconverse/: README.md  run.sh  wespeaker
python_api/: modules.html  wespeaker.cli.html  wespeaker.cli.hub.html  wespeaker.cli.speaker.html  wespeaker.cli.utils.html  wespeaker.diar.extract_emb.html  wespeaker.diar.html  wespeaker.diar.make_fbank.html  wespeaker.diar.make_oracle_sad.html  wespeaker.diar.make_rttm.html  wespeaker.diar.make_system_sad.html  wespeaker.diar.spectral_clusterer.html  wespeaker.diar.umap_clusterer.html  wespeaker.frontend.html  wespeaker.frontend.s3prl.html  wespeaker.frontend.tfmel.html  wespeaker.frontend.w2vbert.html  wespeaker.frontend.whisper_encoder.html  wespeaker.html  wespeaker.models.campplus.html  wespeaker.models.convert_repvgg.html  wespeaker.models.ecapa_tdnn.html  wespeaker.models.eres2net.html  wespeaker.models.gemini_dfresnet.html  wespeaker.models.html  wespeaker.models.pooling_layers.html  wespeaker.models.projections.html  wespeaker.models.redimnet.html  wespeaker.models.redimnet2.html  wespeaker.models.repvgg.html  wespeaker.models.res2net.html  wespeaker.models.resnet.html  wespeaker.models.samresnet.html  wespeaker.models.speaker_model.html  wespeaker.models.tdnn.html  wespeaker.models.w2vbert_adapter_mfa.html  wespeaker.models.whisper_PMFA.html  wespeaker.models.xi_vector.html  wespeaker.utils.checkpoint.html  wespeaker.utils.dataset_utils_deprecated.html  (+8 more)
runtime/android/: .gitignore  README.md  gradle.properties  gradlew  settings.gradle.kts
runtime/android/app/src/main/cpp/: CMakeLists.txt  deps.cmake  wespeaker_jni.cpp
runtime/core/speaker/: CMakeLists.txt  bpu_speaker_model.cc  bpu_speaker_model.h  e2e_speaker.cc  e2e_speaker.h  mnn_speaker_model.cc  mnn_speaker_model.h  onnx_speaker_model.cc  onnx_speaker_model.h  speaker_engine.cc  speaker_engine.h  speaker_model.h
runtime/horizonbpu/: .gitignore  CMakeLists.txt  README.md
runtime/mnn/: .gitignore  CMakeLists.txt  README.md  speaker
runtime/onnxruntime/: CMakeLists.txt  README.md  api  bin  cmake  frontend  speaker  utils
scripts/: compute_similarity.py  prepare_dataset.sh
tools/: combine_data.sh  copy_data_dir.sh  downsample_and_apply_gsm.sh  evaluate_V2.sh  extract_embedding.sh  extract_embedding_V2.sh  extract_embedding_deprecated.sh  extract_single_embedding_V2.sh  fix_data_dir.sh  generate_calibration_trial.py  generate_latex_table.py  make_list.py  make_lmdb.py  make_raw_list.py  make_shard_list.py  merge_lora.py  onnx2horizonbin.py  parse_options.sh  plot_WavLM_weights.py  plot_dataset_stats.py  split_dataset.py  subset_data_dir.sh  vector_mean.py  wav2dur.py  wav_to_duration.sh
v3/: README
wenet_speaker/dataset/: dataset.py
wenet_speaker/models/: __init__.py  ecapa_tdnn.py  pooling_layers.py  projections.py  resnet.py  tdnn.py
wenet_speaker/utils/: executor.py  file_utils.py  schedulers.py  score_metrics.py  train_utils.py  utils.py  voxceleb_score.py
wespeaker/: __init__.py
wespeaker/cli/: fbank.py  hub.py  speaker.py  utils.py
wespeaker/dataset/: dataset.py  dataset_V2.py  dataset_deprecated.py  dataset_utils.py  dataset_utils_deprecated.py  lmdb_data.py  processor.py  processor_V2.py  udataset.py
wespeaker/diar/: extract_emb.py  make_fbank.py  make_oracle_sad.py  make_rttm.py  make_system_sad.py  pahc.py  spectral_clusterer.py  umap_clusterer.py
wespeaker/frontend/: __init__.py  s3prl.py  tfmel.py  w2vbert.py  whisper_encoder.py
wespeaker/models/: Transformer_WavLM.py  Transformer_WavLM_Adapter.py  __init__.py  (+22 more)
(+376 files in other folders)
